--- a/To do list/style.css
+++ b/To do list/style.css
@@ -1,15 +1,16 @@
 body{
     min-height:100%;
-    font-family: Bad Script;
+    font-family: Calibri Light;
+    font-weight: bold;
     background: #5614B0;
-    background: -webkit-linear-gradient(to right, #DBD65C, #5614B0);
-    background: linear-gradient(to right, #DBD65C, #5614B0);
+    background: -webkit-linear-gradient(to left, #14c9e9, #bfdd17);
+    background: linear-gradient(to right, #1ba1aa, #27bd21);
   }
   
   h1{
     text-transform: uppercase;
-    background: #86a8e7;
-    color:white;
+    background: #8a6bc5;
+    color:#e2e2d6;
     margin: 0;
     padding:10px 28px;
     font-weight: normal;
@@ -54,7 +55,7 @@ body{
     display: inline-block;
     font-size: 15px;
     border-radius:4px;
-    font-family:Bad Script;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
@@ -69,10 +70,31 @@ body{
   #buttons{
     display:inline-block;
     text-align:center;
-    margin-left:22%;
+    margin-left:0px;
     position:absolute;
     bottom:5px;
   }
+
+  .save:hover{
+    box-shadow: 5px 5px 10px #1ba1aa;
+  }
+
+  .clear:hover{
+    box-shadow: 5px 5px 20px #1ba1aa;
+  }
+
+  .tipBtn:hover{
+    box-shadow: 5px 5px 20px #1ba1aa;
+  }
+
+  .catFactsBtn:hover{
+    box-shadow: 5px 5px 20px #1ba1aa;
+  }
+
+.catFactsBtn{
+  margin-top: 10px ;
+}
+
   #todo{
     margin: 0 auto ;
     box-shadow: 0 0 1em black;
