--- a/To do list/style.css
+++ b/To do list/style.css
@@ -103,7 +103,7 @@ body{
     background:white;
     position:relative;
   }
-  #overlay{
+  .overlay{
     height: 0;
     width: 100%;
     position: fixed; 
